--- a/index.html
+++ b/index.html
@@ -7,28 +7,31 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
 <header>
-    <h1>Oddiy Sahifa</h1>
+    <h1>Najot talim Sahifa</h1>
     <div class="buttons">
-        <button onclick="changeStyle('button1')">Button1</button>
-        <button onclick="changeStyle('button2')">Button2</button>
-        <button onclick="changeStyle('button3')">Button3</button>
+        <button  onclick="myBtn('button1')">Button1</button>
+        <button  onclick="myBtn('button2')">Button2</button>
+        <button  onclick="myBtn('button3')">Button3</button>
     </div>
 </header>
 
 <div class="container">
     <div class="block">
-        <h2>Hello World</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, natus quas. Repudiandae accusamus maxime neque at numquam sapiente impedit eius.</p>
-    </div>
+        <h2>Najot Talim</h2>
+        </div>
     <div class="block card">
-        <h2>London</h2>
-        <p>London — Buyuk Britaniya poytaxti, mamlakatning muhim siyosiy, iqtisodiy va madaniy markazi. Katta London deb ham nomlanadi. Temza daryosining quyi oqimida, Shimoliy dengizdan 64 km masofada, London havzasi deb ataluvchi tekislikning markaziy qismida joylashgan. Poytaxt atrofidagi shaharlar va Siti bilan maʼmuriy jihatdan alohida metropoliten grafligi qilib ajratilgan Katta L.ni tashkil etadi. Aholisi 7 mln. kishi (1999). Iqlimi qishi yumshoq, yozi unchalik issiq boʻlmagan dengiz iqlimi. Yanvarning oʻrtacha temperaturasi 5,3°, iyulniki 18,9°. Yillik oʻrtacha yogʻin 700 mm.</p>
+        <h2>Najot Talim about</h2>
+        <p>Najot Ta’lim – Qisqa vaqt ichida yuqori natijalarga erishgan, O’zbekistondagi zamonaviy kasblarni o’rgatuvchi ilg’or o’quv markazi. Sizga eng kerakli zamonaviy kasb va bilimlarni o’rgatadigan maskan. Bu yerda xorijiy tillardan tashqari media, marketing va dasturlash kabi zamonaviy kasblarning mutaxassisi bo’lishingiz mumkin.
+
+</p>
     </div>
     <div class="block">
-        <h2>London</h2>
-        <img src="./Без названия.jfif">
+        <h2>Najot talim</h2>
+        <img src="./najot.webp"
+        height="500"
+        width="500"
+>
     </div>
 </div>
 <div class="footer">
