--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <header>
+    <div class="dark"></div>
     <h1>Najot talim Sahifa</h1>
     <div class="buttons">
         <button  onclick="myBtn('button1')">Button1</button>
@@ -27,12 +28,21 @@
 </p>
     </div>
     <div class="block">
-        <h2>Najot talim</h2>
-        <img src="./najot.webp"
-        height="500"
-        width="500"
->
+        <h1>Najot talim</h1>
+          <main>
+    <div class="slider-container">
+    <div class="slider">
+      <img src="./lo.jpg" >
+      <img src="./n t.jpg"  >
+      <img src="./l.jpg"  >
+      <img src="./najot.webp"  >
     </div>
+    <button class="prev-button" aria-label="Посмотреть предыдущий слайд">&lt;</button>
+    <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>
+  </div>
+  </main>
+ </div>
+    
 </div>
 <div class="footer">
     <h2 class="mualif">Olimov Nurmukhammad</h2>
