--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     
 </div>
 <div class="footer">
+    <div class="nam">
     <h2 class="mualif">Olimov Nurmukhammad</h2>
+    </div>
 </div>
 <!-- JAVA SCRIPT -->
 <script src="index.js"></script>
